Fix card title line-heights and max-height to prevent overflow

--- a/src/assets/scss/cards.scss
+++ b/src/assets/scss/cards.scss
@@ -5,7 +5,6 @@
   color: $black;
   font-size: $font-size-small;
   height: auto;
-  line-height: 1.1875rem;
   transition: box-shadow 0.25s;
 
   &.card {
@@ -49,7 +48,6 @@
   .card-title {
     font-size: 1rem;
     font-weight: 600;
-    max-height: 1.1875rem;
     margin-bottom: 0.75rem;
     overflow: hidden;
     display: -webkit-box;
@@ -72,6 +70,7 @@
 
   .card-text {
     color: $mediumgrey;
+    line-height: 1.1875rem;
 
     p {
       max-height: 4.75rem;
@@ -106,9 +105,10 @@
     }
 
     &:after {
-      content: '\e900';
       @extend .icon-font;
+      content: '\e900';
       margin-left: 5px;
+      line-height: 1.5 !important;
     }
   }
 
